specs/001-typescript-to-zig-native/examples/valid/math-more.ts
console.log(Math.sign(-4));
console.log(Math.clamp(12, 1, 9));
console.log(Math.sqrt(9));
