specs/001-typescript-to-zig-native/examples/invalid/std-type.ts
console.log(String.contains("x", 1));
